--- a/index.html
+++ b/index.html
@@ -12,6 +12,20 @@
         window.ih = innerHeight
     </script>
     <script src="script.js" type="module"></script>
+
+    <style>
+        body, html {
+            margin: 0;
+            padding: 0;
+            overflow: hidden; /* Pour empêcher le défilement de la page */
+        }
+        canvas {
+            display: block;
+            width: 100vw;
+            height: 100vh;
+        }
+    </style>
+    
 </head>
 <body>
    <canvas id="canvas">
